--- a/src/app/file-cabinet/file-cabinet.page.html
+++ b/src/app/file-cabinet/file-cabinet.page.html
@@ -1,7 +1,7 @@
 <ion-content padding style='position: relative;'>
 
 	<ion-row>
-		<ion-item class='filter-row'>
+		<ion-item class='filter-row' lines='none'>
 			<img class='filter-icon' src='assets/imgs/settings_icon.png'/>
 			<label>Filter</label>
 
