--- a/src/app/signup/signup.page.scss
+++ b/src/app/signup/signup.page.scss
@@ -35,14 +35,22 @@ ion-input{
 }
 
 .form-card{
-	--background: var(--ion-color-light)
+	--background: var(--dark-bg);
+	--color: var(--ion-color-light);
+	position: relative;
+}
+
+.form-card-header{
+	background: none;
+	padding:  0;
+}
+.form-card-title{
 }
 
 
 .logo-container{
 	margin-bottom: 50px;
 	display: flex;
-	justify-content: center;
 }
 
 
@@ -56,10 +64,40 @@ ion-input{
 	width: 38px;
 	height: 32px;
 	cursor: pointer;
+	margin-top: 8px;
+	position: absolute;
+	z-index: 999;
+  top: 0;
+  left: 0;
 }
 
 .error-msg{
 	font-size: 12px;
 	margin-top: 5px;
 	padding-left: 15px;
+}
+
+.title-container{
+	display: block;
+	text-align: center;
+}
+
+.input-label{
+	--color: var(--ion-color-light);
+}
+
+ion-input{
+	--color: var(--ion-color-light);
+	/*--background: var(--ion-color-light);*/
+}
+
+.datetime-input{
+	--color: var(--ion-color-light);
+	
+}
+
+ion-item{
+	--color: var(--ion-color-light) !important;
+  color: var(--ion-color-light) !important;
+
 }
