--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -10,6 +10,10 @@
 
 	<ion-tabs>
 	  <ion-tab-bar slot="bottom">
+	    <ion-tab-button tab="dashboard">
+	      <ion-icon name="home"></ion-icon>
+	    </ion-tab-button>
+
 	    <ion-tab-button tab="task">
 	      <ion-icon name="clipboard"></ion-icon>
 	      <!-- <ion-label>Tasks</ion-label> -->
@@ -37,8 +41,8 @@
 		  <img src="../assets/hayley.png"/>
 		</ion-avatar> -->
     <ion-list>
-      <ion-item style="z-index: 9999;" (click)="navTo('/settings')">Settings</ion-item>
-      <ion-item style="z-index: 9999;" (click)="navTo('/profile')">Profile</ion-item>
+      <!-- <ion-item style="z-index: 9999;" (click)="navTo('/settings')">Settings</ion-item> -->
+      <!-- <ion-item style="z-index: 9999;" (click)="navTo('/profile')">Profile</ion-item> -->
       <ion-item style="z-index: 9999;" (click)="logout()">Logout</ion-item>
     </ion-list>
   </ion-content>
